Bimba Dev/src/objects/PMO_TaskAssignment__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <fields>
        <fullName>Owner_Queue__c</fullName>
        <label>Owner/Queue</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preceding_Task__c</fullName>
        <label>Preceding Task</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Task__c</fullName>
        <label>Task</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>PMO_TaskAssignment</label>
</CustomObject>